<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pszczółka Majusia</string>
    //MainScreen Strings
    <string name="act_main_name">Name</string>
    <string name="act_main_password">Password</string>
    <string name="act_main_loginbtn">Login</string>

    <string name="act_menu_addHarvest">Add Harvest</string>
    <string name="act_menu_addSell">Add Sell</string>
    <string name="act_menu_viewHistory">View Sell History</string>
    <!-- AddHarvestActivity -->
    <string-array name="act_addHarvest_spinner">
        <item>Rzepak</item>
        <item>Akacja</item>
        <item>Lipa</item>
    </string-array>
    <string name="kgTextField">How many kilograms?</string>
    <string name="glassTextField">How many glasses?</string>
    <string name="kgSwitcher">Add Kilos?</string>
    <string name="glassSwitcher">Add Glasses?</string>
    <string name="addHarvButton">Add Harvest</string>
    <string name="bigGlassSwitcher">Big Glasses?</string>
    <string name="smallGlassSwitcher">Small Glasses?</string>
    <string name="title_activity_tabbed_test">tabbedTest</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <!---End of AddHarvestActivity-->

    <!--Fragment1Activity-->
    <string name="act_order_whatToSell">What to Sell?</string>
    <string name="act_order_canSell">You can sell:</string>
    <string name="act_order_big_glasses_label">Big Glasses</string>
    <string name="act_order_small_glasses_label">Small Glasses</string>
    <string name="act_order_quantity">Quantity</string>
    <string name="act_order_amount">Price</string>
    <string name="act_order_currency">€</string>
    <string name="act_order_switcher_custom_price">Custom price?</string>
    <string name="act_order_customer_name">Customer name</string>
    <string name="act_orderd_summary_label">Suma: </string>
    <string name="act_order_default_price">0</string>
    <string name="act_order_add_button">Add to Cart</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_order_tab">OrderTab</string>
    <string name="title_activity_test">TestActivity</string>
    <!--End of Fragment1Activity-->

    <!--Fragment2Activity-->
    <string name="act_order_bill_summary">Summary: </string>
    <string name="act_order_bill_summary_currency">%1$d USD</string>
    <string name="act_order_email_message">Witaj,\n\n
    Dziękujemy za złożenie zamówienia w naszym sklepie.\n\n
    Twoje zamówienie wygląda następująco:\n\n\n
    Rodzaj miodu: \t%1$s\n
    Ilość słoików: \t%2$s\n
    Cena: \t%3$s\n\n
    Całkowita cena do zapłaty to: %4$s\n\n
    Zapraszamy ponownie do skorzystania z naszej oferty.\n\n
    Pozdrawiamy\n
    Zespół BeeCompany</string>
    <!--End of Fragment2Activity-->

    <string name="act_update_title">Order Edit</string>
    <string name="act_update_quantity_title">Quantity</string>
    <string name="act_update_current_quantity">Current quantity: </string>
    <string name="act_update_new_quantity">New quantity: </string>
    <string name="act_update_price_title">Price</string>
    <string name="act_update_current_price">Current price: </string>
    <string name="act_update_new_price">New price: </string>
    <string name="act_update_siwtcher_price">Change price?</string>
    <string name="act_update_btn_save">Save chenges</string>
</resources>
