<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainWindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/mainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAddHarvest"
                android:layout_width="175dp"
                android:layout_height="100dp"
                android:text="@string/act_menu_addHarvest"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="140dp" />

            <Button
                android:id="@+id/btnAddSell"
                android:layout_width="175dp"
                android:layout_height="100dp"
                android:text="@string/act_menu_addSell"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="140dp" />

            <Button
                android:id="@+id/btnViewHistory"
                android:layout_width="175dp"
                android:layout_height="100dp"
                android:text="@string/act_menu_viewHistory"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="140dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="175dp"
                android:layout_height="100dp"
                android:text="Button"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="140dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="175dp"
                android:layout_height="100dp"
                android:text="Button"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="140dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
